--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.8",
+    "node-localstorage": "^2.1.6",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {},
